--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -2,7 +2,11 @@ name: Deploy Hugo site to Pages
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
+
+permissions:
+  contents: write
 
 jobs:
   deploy:
@@ -11,8 +15,12 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+          fetch-depth: 0
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
+          extended: true
       - name: Build
         run: hugo --minify
       - name: Deploy
