--- a/hugo.toml
+++ b/hugo.toml
@@ -7,7 +7,7 @@ theme = "terminal"
 [params]
   # Couleur du thème : "orange" | "blue" | "red" | "green" | "pink"
   customCSS = ["css/custom.css"]
-  themeColor = "default"
+  themeColor = ["css/custom.css"]
   
   # Si vous voulez le mode sombre
   showMenuItems = 2
